crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_star_import.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_star_import.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..24,
        body: [
            Import(
                StmtImport {
                    node_index: 0,
                    range: 0..6,
                    names: [],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 7..8,
                    value: Starred(
                        ExprStarred {
                            node_index: 0,
                            range: 7..8,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 8..8,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Import(
                StmtImport {
                    node_index: 0,
                    range: 9..18,
                    names: [
                        Alias {
                            range: 16..17,
                            node_index: 0,
                            name: Identifier {
                                id: Name("x"),
                                range: 16..17,
                                node_index: 0,
                            },
                            asname: None,
                        },
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 19..23,
                    value: Tuple(
                        ExprTuple {
                            node_index: 0,
                            range: 19..23,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: 0,
                                        range: 19..20,
                                        value: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 20..20,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: 0,
                                        range: 22..23,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import *
  |        ^ Syntax Error: Expected one or more symbol names after import
2 | import x, *, y
  |


  |
1 | import *
  |         ^ Syntax Error: Expected an expression
2 | import x, *, y
  |


  |
1 | import *
2 | import x, *, y
  |         ^ Syntax Error: Trailing comma not allowed
  |


  |
1 | import *
2 | import x, *, y
  |           ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | import *
2 | import x, *, y
  |            ^ Syntax Error: Expected an expression
  |
